-- fixed css for modal been overlapped by contents

--- a/app/[lang]/views/modal.css
+++ b/app/[lang]/views/modal.css
@@ -2,23 +2,26 @@
   position: fixed;
   top: 0;
   left: 0;
-  width: 100%;
-  height: 100%;
+  width: 100vw;
+  height: 100vh;
   background-color: rgba(0, 0, 0, 0.5);
   display: flex;
   justify-content: center;
   align-items: center;
+  margin: 0 !important;
+  z-index: 999;
 }
 
 .modal-view {
-  background-color: #fff;
+  background-color: rgb(34, 34, 34);
   border-radius: 4px;
   box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.1);
   padding: 30px;
   position: relative;
   width: 80%;
-  max-height: 90vh;
+  max-height: 80vh;
   overflow-y: auto;
+  color: white;
 }
 
 .modal-view .close-button {
@@ -29,4 +32,48 @@
   border: none;
   cursor: pointer;
   font-size: 18px;
+  color: white;
+}
+
+.modal-view .markdown-html {
+  font-size: 12px;
+}
+
+.modal-view .markdown-html h1 {
+  font-size: 16px;
+}
+
+/* Media query for iPhone 12 Plus and above Retina display */
+@media only screen and (min-device-width: 375px) and (-webkit-min-device-pixel-ratio: 2),
+only screen and (min-device-width: 414px) and (-webkit-min-device-pixel-ratio: 3) {
+  .modal-view .markdown-html {
+    font-size: 14px;
+  }
+
+  .modal-view .markdown-html h1 {
+    font-size: 16px;
+  }
+
+
+  .modal-view .close-button {
+    top: 16px;
+    right: 0px;
+  }
+}
+
+/* Media query for desktop browsers with Retina display */
+@media only screen and (min-device-width: 1080px) and (-webkit-min-device-pixel-ratio: 2),
+only screen and (min-device-width: 1240px) and (-webkit-min-device-pixel-ratio: 3) {
+  .modal-view .markdown-html {
+    font-size: 12px;
+  }
+
+  .modal-view .markdown-html h1 {
+    font-size: 16px;
+  }
+
+  .modal-view .close-button {
+    top: 24px;
+    right: 24px;
+  }
 }
